deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-git-deploy
  namespace: test-nginx
  labels:
    app: go-git
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-git
  template:
    metadata:
      labels:
        app: go-git
    spec:
      containers:
      - name: go-git
        image: registry.do.x5.ru/devops/go-git:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: theimagepullsecret
