service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-git-svc
  namespace: test-nginx
  labels:
    app: go-git
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-git
  type: NodePort
